[package]
name = "colorconv"
version = "0.1.0"
edition = "2021"
authors = ["Kyohei Uto <kyoheiu@outlook.com>"]
description = "color conversion library"
readme = "README.md"
repository = "https://github.com/kyoheiu/colorconv"
license = "MIT"
keywords = ["color", "conversion", "rgb",]
categories = ["graphics"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hsl = "0.1.1"
phf = { version = "0.11.0", features = ["macros"] }
